--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Name - Portfolio</title>
+    <title>Jon Arbell De Ocampo's Website</title>
     <style>
         body, html {
             height: 100%;
@@ -54,7 +54,7 @@
 <body>
     <div class="container">
         <header>
-            <h1>Your Name</h1>
+            <h1>Jon Arbell De Ocampo</h1>
             <nav>
                 <a href="#about">About</a>
                 <a href="#projects">Projects</a>
@@ -66,15 +66,15 @@
             <h2>About Me</h2>
             <img src="profile_picture.jpg" alt="Your Name's Profile Picture" class="profile-pic">
             <p>
-                A brief paragraph about yourself, your background, skills, and experience.
+                Hi, I'm Jon Arbell De Ocampo, aspiring software engineer. I know the basics of c++ and I learning it within 3 months until now.
             </p>
         </section>
 
         <section id="projects">
             <h2>Projects</h2>
             <ul>
-                <li><a href="#">Project 1</a>: Short description of the project.</li>
-                <li><a href="#">Project 2</a>: Short description of another project.</li>
+                <li><a href="#">Project 1</a>: This project is from Learn Computer Today.</li>
+                <li><a href="#">Project 2</a>: This project is from Mr. Michael Tan.</li>
                 <!-- Add more projects as list items -->
             </ul>
         </section>
@@ -82,12 +82,12 @@
         <section id="contact">
             <h2>Contact</h2>
             <p>
-                How to reach you: Email, LinkedIn, GitHub, etc.
+                deocampo.arbelldonor@gmail.com
             </p>
         </section>
 
         <footer>
-            <p>© 2023 by Your Name</p>
+            <p>© 2023 by Learn Computer Today</p>
         </footer>
     </div>
 </body>
