--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@
         <section id="projects">
             <h2>Projects</h2>
             <ul>
-                <li><a href="#">Project 1</a>: This project is from Learn Computer Today.</li>
-                <li><a href="#">Project 2</a>: This project is from Mr. Michael Tan.</li>
+                <li><a href="https://github.com/JonArbell/githubproject">Project 1</a>: This project is from Learn Computer Today.</li>
+                <li><a href="https://github.com/JonArbell/cpp-Console-App-main-projects">Project 2</a>: This project is made of me. This is a console app code in c++.</li>
                 <!-- Add more projects as list items -->
             </ul>
         </section>
