--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         <section id="contact">
             <h2>Contact</h2>
             <p>
-                deocampo.arbelldonor@gmail.com
+               Email: deocampo.arbelldonor@gmail.com
             </p>
         </section>
 
