--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
         <section id="about">
             <h2>About Me</h2>
-            <img src="profile_picture.jpg" alt="Your Name's Profile Picture" class="profile-pic">
+            <img src="profile.image.png" alt="Arbell's Profile Picture" class="profile-pic">
             <p>
                 Hi, I'm Jon Arbell De Ocampo, aspiring software engineer. I know the basics of c++ and I learning it within 3 months until now.
             </p>
